@@ -4,6 +4,11 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Wed Nov 19 18:22 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Added Riley Williams changes to bootsect.S to fix a bug and tidy
+	  up the code.
+
 Wed Nov 19 17:51 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Added latest changes to 286 pmode code by
